2008-11-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* window.el (window--frame-usable-p): Consider dedicated windows as usable.

	* files.el (confirm-nonexistent-file-or-buffer):
	Rename from find-file-confirm-nonexistent-file.
	(read-buffer-to-switch): Use it.

2008-11-18  Juanma Barranquero  <lekktu@gmail.com>

	* server.el (server-temp-file-p): Use `string-match-p'.
	(server-socket-dir): Set to nil if local sockets are unsupported.
	(server-start): Don't try to delete local socket if unsupported.
	(server-kill-new-buffers): Reflow docstring.
	(server-delete-client, server-handle-delete-frame)
	(server-save-buffers-kill-terminal): Doc fixes.
	(server-send-string): Fix typo in docstring.

2008-11-18  Sam Steingold  <sds@gnu.org>

	* progmodes/compile.el (compilation-start-hook): New hook.
	(compilation-start): Run it on the compilation process.

2008-11-18  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-cmds.el (update-leim-list-file): Simplify.
	(prefer-coding-system, find-coding-systems-for-charsets):
	Fix docstring typos.
	(select-safe-coding-system, input-method-exit-on-first-char)
	(language-info-alist, language-info-custom-alist): Reflow docstrings.
	(toggle-input-method, read-multilingual-string): Doc fixes.
	Reflow docstrings.
	(locale-name-match, sort-coding-systems, find-multibyte-characters)
	(read-char-by-name): Use `string-match-p'.
	(get-char-code-property, put-char-code-property)
	(char-code-property-description): Be silent while loading uni-* files.
	(ucs-names): Use `dotimes-with-progress-reporter', because loading
	the Unicode character names is *slow*.

2008-11-17  Chong Yidong  <cyd@stupidchicken.com>

	* wid-edit.el (widget-image-insert): Don't add a mouse-face.

	* cus-edit.el (custom-group-value-create): Don't insert docstring twice.

2008-11-17  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-cmds.el (ucs-completions): Mark as risky.

2008-11-17  Martin Rudalics  <rudalics@gmx.at>
