@@ -1,5 +1,8 @@
 2008-11-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* textmodes/ispell.el (ispell-dictionary-base-alist): Adjust to the
+	case where the default dictionary is French, Spanish, younameit.
+
 	* window.el (window--frame-usable-p): Consider dedicated windows as usable.
 
 	* files.el (confirm-nonexistent-file-or-buffer):
